--- a/report/bare_jrnl.tex
+++ b/report/bare_jrnl.tex
@@ -15,6 +15,11 @@
 \usepackage{amsfonts}
 \usepackage{amsmath}
 
+\usepackage{booktabs}
+
+\usepackage{float}
+\restylefloat{table}
+
 \definecolor{Code}{rgb}{0,0,0}
 \definecolor{Decorators}{rgb}{0.5,0.5,0.5}
 \definecolor{Numbers}{rgb}{0.5,0,0}
@@ -74,16 +79,14 @@ emphstyle={\color{self}\slshape},
 \maketitle
 
 \section{Elliptic Curves}
-This question has been divided into four parts, labeled A through D.
-
 \subsection{Part a}
 The Elliptic curve I was assigned was $y^2 = x^3 + 7x + 1$, over the field $\mathbb{F}_{17}$. 
 
 I began by calculating all the values of $y^2$:
 
-\begin{table}[h]
+\begin{table}[H]
 \centering
-\begin{tabular}{llllllllllllllllll}
+\begin{tabular}{l|lllllllllllllllll}
 $y$   & 0 & 1 & 2 & 3 & 4  & 5 & 6 & 7  & 8  & 9  & 10 & 11 & 12 & 13 & 14 & 15 & 16 \\
 $y^2$ & 0 & 1 & 4 & 9 & 16 & 8 & 2 & 15 & 13 & 13 & 15 & 2  & 8  & 16 & 9  & 4  & 1 
 \end{tabular}
@@ -100,25 +103,17 @@ I produced a table of $y^2$ values, which I mapped back to $y$ values.\
 
 \begin{table}[h]
 \centering
-\begin{tabular}{lll}
-$x$ & $y^2$ & $y$     \\
-0   & 1     & 1 or 16 \\
-1   & 9     & 3 or 14 \\
-2   & 6     & --      \\
-3   & 15    & 10 or 7 \\
-4   & 8     & 5 or 12 \\
-5   & 8     & 5 or 12 \\
-6   & 4     & 15 or 2 \\
-7   & 2     & 6 or 11 \\
-8   & 8     & 5 or 12 \\
-9   & 11    & --      \\
-10  & 0     & 0       \\
-11  & 15    & 10 or 7 \\
-12  & 11    & --      \\
-13  & 11    & --      \\
-14  & 4     & 15 or 2 \\
-15  & 13    & 8 or 9  \\
-16  & 10    &        
+\begin{tabular}{lllllllll}
+$x$ & $y^2$ & $y$     & & & &  $x$ & $y^2$ & $y$     \\  \midrule
+0   & 1     & 1 or 16 & & & & 9   & 11    & --      \\
+1   & 9     & 3 or 14 & & & & 10  & 0     & 0       \\
+2   & 6     & --      & & & & 11  & 15    & 10 or 7 \\
+3   & 15    & 10 or 7 & & & & 12  & 11    & --      \\
+4   & 8     & 5 or 12 & & & & 13  & 11    & --      \\
+5   & 8     & 5 or 12 & & & & 14  & 4     & 15 or 2 \\
+6   & 4     & 15 or 2 & & & & 15  & 13    & 8 or 9  \\
+7   & 2     & 6 or 11 & & & & 16  & 10    & -- \\
+8   & 8     & 5 or 12 
 \end{tabular}
 \end{table}
 
@@ -130,28 +125,42 @@ infinity.
 The order of my group is twenty four. 
 
 \subsection{Part b}
-Yes, my group is cyclic.
+The group has order of twenty four. A cyclic group is the direct product of two
+smaller cyclic groups. My group can have one of the following structues:
+$\mathbb{C}_{24}$, $\mathbb{C}_{12}\times\mathbb{C}_{2}$,
+$\mathbb{C}_{6}\times\mathbb{C}_{4}$, or $\mathbb{C}_{3}\times\mathbb{C}_{8}$
 
-The group has order of twenty four, meaning it can have one of the following
-structues: $\mathbb{C}_{24}$, $\mathbb{C}_{12}\times\mathbb{C}_{2}$,
-$\mathbb{C}_{6}\times\mathbb{C}_{4}$, $\mathbb{C}_{6}\times\mathbb{C}_{4}$,
-$\mathbb{C}_{6}\times\mathbb{C}_{2}\times\mathbb{C}_{2}$,
-$\mathbb{C}_{3}\times\mathbb{C}_{4}\times\mathbb{C}_{2}$, or
-$\mathbb{C}_{3}\times\mathbb{C}_{8}$
+For a group to be equivilent to the group I produced, it must have one element
+that has order two, because there is only one element that when added to itself
+produces the identity, a point with $y = 0$. I enumerated the groups by hand to find that they
+have the following number of elements of orders one and two: 
 
+\begin{table}[H]
+\centering
+\begin{tabular}{l@{}cc}
+Group                                 & Elements of Order One & Elements of Order Two \\  \midrule
+$\mathbb{C}_{24}$                     & 1                     & 1                     \\
+$\mathbb{C}_{12}\times\mathbb{C}_{2}$ & 1                     & 3                     \\
+$\mathbb{C}_{6}\times\mathbb{C}_{4}$  & 1                     & 3                     \\
+$\mathbb{C}_{3}\times\mathbb{C}_{8}$  & 1                     & 1                     
+\end{tabular}
+\end{table}
+
+This means that my group must be either $\mathbb{C}_{24}$ or
+$\mathbb{C}_{3}\times\mathbb{C}_{8}$. $\mathbb{C}_{24}$ is cyclic, because it
+is the cyclic group of 24 elements. $\mathbb{C}_{3}\times\mathbb{C}_{8}$ is the
+product of two groups whose sizes are coprime, this means that it is also cyclic.
+
+Since both these groups are cyclic, my group must be cyclic. The answer to the
+original question, is the group cyclic, is yes. 
 
 \subsection{Part c}
 Elliptic curves have the interesting property of that any two points on the
 line will intersect the line again at another point. This can be used as a
-group operator, and used to generate a group. For some reason this new group
-can be nice and secure.  
+group operator, and used to generate a group. 
 
 \subsection{Part d}
-To encyrpt a message using elliptic curve cryptography, I have chosen to use a
-larger elliptic curve, as the curve that I was assigned has a low order, so
-will not be secure. 
 
-I wrote Python code to encyrpt the message using el gammal encryption. 
 
 \vfill
 \pagebreak
