--- a/report/bare_jrnl.tex
+++ b/report/bare_jrnl.tex
@@ -20,6 +20,12 @@
 \usepackage{float}
 \restylefloat{table}
 
+\usepackage{titlesec}
+
+\titlespacing*{\section}{0pt}{2pt}{4pt}
+\titlespacing*{\subsection}{0pt}{2pt}{4pt}
+
+
 \definecolor{Code}{rgb}{0,0,0}
 \definecolor{Decorators}{rgb}{0.5,0.5,0.5}
 \definecolor{Numbers}{rgb}{0.5,0,0}
@@ -80,9 +86,8 @@ emphstyle={\color{self}\slshape},
 
 \section{Elliptic Curves}
 \subsection{Part a}
-The Elliptic curve I was assigned was $y^2 = x^3 + 7x + 1$, over the field $\mathbb{F}_{17}$. 
-
-I began by calculating all the values of $y^2$:
+The Elliptic curve I was assigned was $y^2 = x^3 + 7x + 1$, over the field
+$\mathbb{F}_{17}$. I began by calculating all the values of $y^2$:
 
 \begin{table}[H]
 \centering
@@ -99,7 +104,7 @@ for x in range(0, 16):
     print (x**3 + 7*x + 1) % 17 
 \end{python}
 
-I produced a table of $y^2$ values, which I mapped back to $y$ values.\
+I produced a table of $y^2$ values for each value of $x$, which I mapped back to $y$ values.\
 
 \begin{table}[h]
 \centering
@@ -120,9 +125,7 @@ $x$ & $y^2$ & $y$     & & & &  $x$ & $y^2$ & $y$     \\  \midrule
 The points on my curve are: (0,1), (0,16), (1, 3), (1, 14), (3, 10), (3, 7),
 (4, 5), (4, 12), (5, 5), (5,12), (6, 15), (6, 2), (7, 6), (8, 5), (8, 12), (10,
 0), (11, 10), (11,7), (14, 5), (14, 2), (15, 8), (15, 9) and the point at
-infinity. 
-
-The order of my group is twenty four. 
+infinity. The order of my group is twenty four. 
 
 \subsection{Part b}
 The group has order of twenty four. A cyclic group is the direct product of two
@@ -130,10 +133,11 @@ smaller cyclic groups. My group can have one of the following structues:
 $\mathbb{C}_{24}$, $\mathbb{C}_{12}\times\mathbb{C}_{2}$,
 $\mathbb{C}_{6}\times\mathbb{C}_{4}$, or $\mathbb{C}_{3}\times\mathbb{C}_{8}$
 
-For a group to be equivilent to the group I produced, it must have one element
-that has order two, because there is only one element that when added to itself
-produces the identity, a point with $y = 0$. I enumerated the groups by hand to find that they
-have the following number of elements of orders one and two: 
+For a group to be equivilent to the group I produced, it must have exactly one
+element that has order two, because there is only one element that when added
+to itself produces the identity, a point with $y = 0$. I enumerated the groups
+by hand to find that they have the following number of elements of orders one
+and two: 
 
 \begin{table}[H]
 \centering
@@ -149,18 +153,66 @@ $\mathbb{C}_{3}\times\mathbb{C}_{8}$  & 1                     & 1
 This means that my group must be either $\mathbb{C}_{24}$ or
 $\mathbb{C}_{3}\times\mathbb{C}_{8}$. $\mathbb{C}_{24}$ is cyclic, because it
 is the cyclic group of 24 elements. $\mathbb{C}_{3}\times\mathbb{C}_{8}$ is the
-product of two groups whose sizes are coprime, this means that it is also cyclic.
-
-Since both these groups are cyclic, my group must be cyclic. The answer to the
-original question, is the group cyclic, is yes. 
+product of two groups whose sizes are coprime, this means that it is also
+cyclic. Since both these groups are cyclic, my group must be cyclic. The answer
+to the original question, is the group cyclic, is yes. 
 
 \subsection{Part c}
 Elliptic curves have the interesting property of that any two points on the
 line will intersect the line again at another point. This can be used as a
-group operator, and used to generate a group. 
+group operator, and used to generate a group. The group operation is a
+relatively cheap operation to perform, so can be applied multiple times without
+consuming large amounts of CPU time. 
+
+The invese of the group operation, finding the discrete logarithm of a point on
+an elliptic curve, for a known base, is believed to be a hard problem that
+cannot be feasibly solved. Due to this `trapdoor' proprty, elliptic curves can
+be used in a number of public key algorithms, including: elliptic curve
+Diffie–Hellman (ECDH), the Elliptic Curve Integrated Encryption Scheme (ECIES),
+and the Elliptic Curve Digital Signature Algorithm (ECDSA). ECDH is explained
+and demonstrated in Part d.
+
+Elliptic curves provide stronger security for shorter key lengths that other
+traditional public-key cryptography, such as that of the Integers modulo a
+large prime. 
 
 \subsection{Part d}
+To encrypt the message: “A little knowledge is a dangerous thing”. I used
+elliptic curve Diffie-Hellman to produce a session key, and then used the RC4
+stream cipher for the encryption of the message. 
 
+I began by writing code that performs the group operation on points on the
+elliptic curve, the code for this can be found in Appendix \ref{ECC}.  
+
+Next, I wrote a script that simulates the Diffie-Hellman key exchange, using
+the elliptic curve functions provided by the code from the first part. The
+code, found in Appendix \ref{ECDH}, uses the following alogrithm:
+
+\begin{enumerate}[noitemsep]
+\item Alice chooses parameters for the elliptic curve. i.e. A, B and P. These are all sent to Bob.
+\item Alice picks a random point on the curve, $g$, and sends this to Bob.
+\item Alice and Bob then independently pick random numbers: $K_{a}$ and $K_{b}$. 
+\item $K_{a}$ and $K_{b}$ are kept secret, and are both less than the order of the group. 
+\item Alice calculates $g^{K_{a}}$ and sends this to Bob.
+\item Bob calculates $g^{K_{b}}$ and sends this to Alice. 
+\item Alice then calculates $(g^{K_{b}})^{K_{a}}$ which equals $g^{K_{a}K_{b}}$.
+\item Bob then calculates $(g^{K_{a}})^{K_{b}}$ which equals $g^{K_{a}K_{b}}$.
+\item Both parties then take the $x$ component of the shared point $g^{K_{a}K_{b}}$ to be the shared key.
+\end{enumerate}
+
+This algoithm results in a secret shared between the both parties, which no
+other party could calculate by eavesdropping on the communications. 
+
+I performed ECDH using my curve above, and the values of $g = (11, 7)$, $K_{a}
+= 5$, and  $K_{b} = 6$. This resulted in the shared point (12, 7). Hence the
+shared key was ``12''. 
+
+Next, I encrypted this message with an RC4 implementation that I found
+online\footnote{http://code.activestate.com/recipes/576736-rc4-arc4-arcfour-algorithm/},
+that I adapted to use Base64 encoding to allow the ciphertext to be displayed
+in this document. This resulted  in the ciphertext:
+``HkyIm1ppneZOBbm1XC2xtCnRBGHVFJvVQzOM4wr24WkLJC8xFZhS''. I also decrypted the
+message with the same key, and was able to retrieve the original message again. 
 
 \vfill
 \pagebreak
@@ -190,46 +242,38 @@ peaoer hewp tffs gp tfb ela od qhc jeqpaeb
 
 My initial guess was that this cipher was a monoalphabetic substitution cipher,
 since the ciphertext appears to have spaces in roughly the correct places for
-it to be natural language. 
-
-I began solving this cipher by calculating the Index of Coincidence (IC) for
-the text. The IC is a weighted sum of the frequency of the letters, and can be
-used to determine if a ciphertext has the same frequency distribution as a given
-language. If it has the same distribution, then the cipher is a simple
-monoalphabetic substitution cipher. The IC is calculated as:
+it to be natural language. I started solving this cipher by calculating the
+Index of Coincidence (IC) for the text. The IC is a weighted sum of the
+frequency of the letters, which can be used to determine if a ciphertext has
+the same frequency distribution as a given language. If the distribution is
+correct, then it is likely the cipher is a simple monoalphabetic substitution
+cipher. The IC is calculated as:
 
 $$
 \textup{IC} =  \frac{\sum_{i=1}^{c} n_i(n_i -1)}{N(N - 1)/c}
 $$
 
-Where $N$ is the length of the text. $n_1$ to $n_c$ are the counts
-for each of the possible characters. And $c$ is the number of
-letters in the alphabet. 
+Where $N$ is the length of the text. $n_1$ to $n_c$ are the counts for each of
+the possible characters. And $c$ is the number of letters in the alphabet. The
+code I wrote to calculate this can be found in Appendix \ref{IC_code}. I
+obtained a value of 1.128, which is quite different from the IC for English of
+1.73. From this I concluded that the cipher used is not a simple monoalphabetic
+substitution. 
 
-To do this I used code I wrote myself that can be found in Appendix
-\ref{IC_code}. I obtained a value of 1.128, which is quite different from the
-IC for English of 1.73. From this I concluded that the cipher used is not a
-simple monoalphabetic substitution. 
+I then iterated through different strides to see if the cipher used was
+dependent on the position in the text. A stride of 2 did not produce a better
+result, yielding 1.126 and 1.129 starting from characters 0 and 1 respectively.  
 
-Next I attempted to iterated through different strides (number of letters to
-skip when sampling), to see if the cipher used was dependent on the position in
-the text. A stride of 2 did not produce a better result, yielding 1.126 and
-1.129 starting from characters 0 and 1 respectively.  
+Using a stride of 3 returned a better set of values: 1.844, 1.759 and 1.80; for
+starting character positions of 0, 1 and 2 respectively. This indicated that it
+was worth investigating. I began by treating the cipher as a Vigenere cipher,
+with a key length of three. On inspection, the triad 'qhc' jumped out at me as
+a repeating pattern. Due to the commonness of the word, I figured that the
+word could be `the'. If this was correct, then the Vigenere key would be 'xay',
+resulting in a shifts of 23, 0 and 2.
 
-Fortunately, using a stride of 3 returned a much better set of values: 1.844,
-1.759 and 1.80; for starting character positions of 0, 1 and 2 respectively.
-Although this is not exactly equal the expected values for English, I felt that
-for the size of the messages (total length of the message divided by three),
-they indicated that it was worth investigating.
-
-Given that the substitution was a poly-alphabetic substitution with stride of
-three, I began by treating the cipher as a Viginere cipher. On inspection, the
-triad 'qhc' jumped out at me as a repeating pattern. Due to the commonness of
-the word, I figured that the word could be `the'. If this was correct, then the
-Viginere key would be 'xay', resulting in a shifts of 23, 0 and 2.
-
-Using the following python code found in Appendix \ref{vig_code}, I generated
-the answer to the question. The answer that I obtained was: 
+Using the following python code seen in Appendix \ref{vig_code}, I generated
+the answer: 
 
 \begin{quote}
 \small
@@ -258,22 +302,20 @@ secret keys this is the end of the message
 \pagebreak
 \section{Two Part Encryption}
 The file ``secret.hex'' contained a secret message. The message had been
-encyrpted in two stages, the first stage was unknown, and the second stage was
+encrypted in two stages, the first stage was unknown, and the second stage was
 a simple XOR based cipher. We were given the first two characters of the
-intermediate text --`Hg'.
+intermediate text --`Hg'. To decrypt the message, the two stages had to be
+performed in reverse order.
 
-To decrypt the message, the two stages had to be performed in reverse order:
-first the XOR stage, followed by the unknown cipher stage. 
-
-I began by creating a python script that first reads in the secret message, and
-then retrieves the key for the known portion of the message. Given that we only
+I began by creating a python script that reads in the secret message, and
+retrieves the key for the known portion of the message. Given that we only
 had two letters of the intermediate text, I guessed that the key length of the
-message is two, and repreated the key that I had retrieved for the length of
-the message to retrieve some text. The Python code that I used to decode the
-message into it's intermediate form is as follows \ref{XOR_code}.
+message is two, and repeated the key that I had retrieved for the length of
+the message to retrieve some text. The code I wrote to decode the
+message into its intermediate form is in Appendix \ref{XOR_code}.
 
 
-This resulted in the followin intermediate text: 
+I managed to retrieve the following intermediate text: 
 
 \begin{quote}
 \small
@@ -295,29 +337,24 @@ qshgtq hgsb hp rut, sbr hgpyt qtsypby sqt hp et mpxbr ub hgt ducuba pm dumt
 uhytdm.
 \end{quote}
 
-By simple inspection, this looked like it was likely to be the output of a
-basic cipher -- the message contains only alphabetic characters, and there are
-spaces evenly distributed throughout the text. Although this could have just
-been by chance, it definitely looked like a good lead to follow.
+By inspection, this looked like the output of a basic substitution cipher --
+the message contains only alphabetic characters, and there are spaces evenly
+distributed throughout the text.
 
-As I believed this text looked like natrual language, I decided the next step was
-to calculate the Index of Coincidence (IC) for this text. 
-
-The value calculated for the IC was ``1.7086'', which is very close to that of
-the English language (1.73). This finding confirmed my belief that the cipher
-used was some form of monoalphabetic substitution.  
+I calculate a value of 1.7086 for the IC, using the code in Appendix
+\ref{IC_code}.  This is very close to that of the English language (1.73). This
+finding confirmed my belief that the cipher used was some form of
+monoalphabetic substitution.  
 
 By copying the intermediate text into {\tt vim}, and using the search and
 replace functionality (s/x/Y/g), I began substituting letters with likely
-substitutions. I started basing my substitions on the frequencies of the
-letters; i.e. beginning by replacing `t' ,the most common letter in the text,
-with `E', the most common letter in English. Once I had replaced a few letters,
-it became obvious what words in the text could potentially be, so I based my
-substitutions on this. 
-
-Eventually, I managed to obtain the following message. As the message, makes
-sense to me in English, I am confident that this passage is the correct
-plaintext. 
+substitutions. I based my substitutions on the frequencies of the
+letters\footnote{These frequencies were calculated as a by product of the
+calculation of the IC. }; i.e. beginning by replacing `t' ,the most common
+letter in the text, with `E', the most common letter in English. Once I had
+replaced a few letters, it became obvious what words in the text could
+potentially be, so I based my substitutions on this. Eventually, I managed to
+obtain the following message: 
 
 \begin{quote}
 \small
@@ -343,9 +380,8 @@ itself.
 \pagebreak
 \section{Headline Puzzles}
 The headline puzzles were a cryptographic puzzle based around five newspaper
-headlines from around the time where the puzzle was published. The 
-
-We were asked to solve the following set of headlines: 
+headlines from around the time where the puzzle was published. We were asked to
+decrypt the following set of headlines: 
 
 \begin{enumerate}[noitemsep]
 \item YNTS QHABT YBK KJVT NR ORLSJN HCTCYA HQYKJV CYOCMBYNT 
@@ -355,38 +391,43 @@ We were asked to solve the following set of headlines:
 \item HQUSESTYY TBDSPKTTY YTT ERYHURBRWCVRPW RW JCBRSKJURTWESK DPSRHRTY
 \end{enumerate}
 
-I started by trying to decode at least one of the messages. I started by
-picking a long word, and trying to find a match for this word based on the
-pattern of the letters. 
+I began solving this problem by writing a python script to help me decode some
+of the headlines. The program, found in Appendix \ref{headline_code}, scans
+through a sentence, and generates the patterns of letters of the words. These
+patterns are then compared to the patterns of words in a 100,000 word English
+dictionary\footnote{http://www.karamasoft.com/ultimatespell/dictionary.aspx}.
+It returns as a result the words, and their potential matches sorted in order
+of least matches. I also extended the script to treat letters in lowercase as
+known letters, and restrict the guesses to words that meat this constraint.  
 
-I wrote this python script to check the pattern of a letters words against an
-UK English language dictionary that I downloaded from
-http://www.karamasoft.com/ultimatespell/dictionary.aspx. This dictionary file
-contained 126,850 words. 
-
-Using this script to find possible matches for ``ERYHURBRWCVRP'' returned only
-one result, ``discrimination''. From here, many of the letters in this puzzle
-could already be determined. I substituted this word back into my script, and
-the words 'policies', 'employees', 'see' and in popped out. 
-
-Substituting these new words back in, resulted in the following phrase: 
-
-"cQrldless employees see discrimination in JamilyJriendly policies"
+The script returned only one match for `ERYHURBRWCVRP': `discrimination'.  From
+here, many of the letters in this puzzle could already be determined. I
+substituted this word back into my script, and the words 'policies',
+`employees', `see' and `in' were the only choices. Substituting these new words
+back in, resulted in the phrase: `cQrldless employees see discrimination in
+JamilyJriendly policies'
 
 Although my dictionary didn't contain the phrase `familyfriendly', I was able
-to work this out using my intuition.`cQrldless' didn't seem to have any
-matching words. It appears that there has been an error here, and given the
-context the correct plain text word should be `childless'. 
+to work this out using intuition.`cQrldless' didn't seem to have any matching
+words. It appears that there has been an error here, and given the context the
+correct plain text word should be `childless'. 
 
 Using this same method I was able to deduce the other messages as:
-\begin{enumerate}[noitemsep]
+\begin{itemize}[noitemsep]
 \item Puzzle 1: ``ntsb urges new ways to combat rising runway incidents''
 \item Puzzle 2: ``dutch authorities closing in on human smuggling ring''
-\item Puzzle 4: ``childless employees see discrimination in familyfriendly policies''
-\end{enumerate}
+\item Puzzle 5: ``childless employees see discrimination in familyfriendly policies''
+\end{itemize}
 
-Puzzles 4 \& 5 lacked any long words that had few enough possible answers from
-which to produce an educated guess. 
+Puzzles 3 \& 4 lacked long words with few enough possible answers to make any
+educated guesses. As I already had more than two decoded puzzles to work with,
+I left these unanswered.  
+
+The way that headline puzzles are constructed uses a permuted alphabet that is
+offset against itself. This means that you can build chains of letters that can
+be used to discover an equivalent alphabet that can be used to decode all the
+messages, when the correct offsets are applied to it. I constructed this table
+of letters to help me decode the message. 
 
 \begin{lstlisting}
    a b c d e f g h i j k l m n o p q r s t u v w x y z
@@ -397,8 +438,15 @@ which to produce an educated guess.
 5. C   H E T J   Q R     S B W P D   U Y V         K   
    a b c d e f g h i j k l m n o p q r s t u v w x y z
 \end{lstlisting}
-                   
-Headline One vs Five
+
+I built up the following chains by setting the substitutions against one
+another. I had to use letters uncovered in later matrices to complete any of
+the chains. 
+
+\pagebreak
+\subsection{Headline One vs Five}
+This was the longest chain that I built up, I did hit several roadblocks that
+were only solvable once I had learned new substitutions from other chains. 
 
 \begin{lstlisting}
                   Z
@@ -430,22 +478,24 @@ Headline One vs Five
                   Z
 \end{lstlisting}
 
-Headline One vs Two
-        
+\subsection{Headline One vs Two}
+This matrix was very useful for finding more substitutions for use in the
+previous chain. 
 \begin{lstlisting}
       U Q D M L E B S T N Y V W K Z X F G A J I C O R H P U Q D M
-      X F G A J I C O R H P U Q D M L E B S T N Y V W K   X F G A 
-      L E B S T N Y V W K   X F G A J I C O R H P U Q D M L E B S       
+      X F G A J I C O R H P U Q D M L E B S T N Y V W K Z X F G A 
+      L E B S T N Y V W K Z X F G A J I C O R H P U Q D M L E B S       
 \end{lstlisting}
 
-Headline Two vs Five 
-
+\subsection{Headline Two vs Five}
+This matrix helped me to find the very last few letters; such as `Z'  
 \begin{lstlisting}
-           R U M B N W X A C H Q L S Y K F J O P 
- R U M B N W X A C H Q L S Y K F J O P D E T V 
+              R U M B N W X A C H Q L S Y K F J O P D E T V Z G 
+    R U M B N W X A C H Q L S Y K F J O P D E T V Z G
 \end{lstlisting}
 
 
+From these chains I was able to build up this substitution table.
 \begin{lstlisting}
    a b c d e f g h i j k l m n o p q r s t u v w x y z
 1. J S O M B G A P C I Z E L Y R U D H T N Q W K F V X 
@@ -456,13 +506,18 @@ Headline Two vs Five
    a b c d e f g h i j k l m n o p q r s t u v w x y z
 \end{lstlisting}
 
+\pagebreak
+
+Using the chain uncovered in Headline One vs Two, I found the offsets that
+produced the correct plaintext for each headline. To help me do this, I wrote a
+script, found in Appendix \ref{Headline_checker}, to enumerate all of the
+possible rotations of the key. I scanned this list my hand looking for phrases
+that were readable English. This resulted in the following offsets of the
+alphabet. 
 
 \begin{lstlisting}
-Keys 
-KEY: G I R U M B N W X A C H Q L S Y K F J O P D E T V Z
-
-  LEBSTNYVWKZXFGAJICORHPUQDM
-
+k LEBSTNYVWKZXFGAJICORHPUQDM
+  --------------------------
 1 EBSTNYVWKZXFGAJICORHPUQDML
 2 JICORHPUQDMLEBSTNYVWKZXFGA
 3 XFGAJICORHPUQDMLEBSTNYVWKZ
@@ -472,7 +527,6 @@ KEY: G I R U M B N W X A C H Q L S Y K F J O P D E T V Z
 
 My final answers for this question were: 
 
-
 \begin{enumerate}[noitemsep]
 \item NTSB URGES NEW WAYS TO COMBAT RISING RUNWAY INCIDENTS
 \item DUTCH AUTHORITIES CLOSING IN ON HUMAN SMUGGLING RING
@@ -481,12 +535,9 @@ My final answers for this question were:
 \item CHILDLESS EMPLOYEES SEE DISCRIMINATION IN FAMILYFRIENDLY POLICIES
 \end{enumerate}
 
-Once the correct answers have been obtained, it is possible to search the Web,
+Once the correct answers have been obtained, it was possible to search the Web,
 and retrieve the correct answers from an NSA leaflet. The NSA solution goes on
-to uncover the setting, the Key and the Hat: 
-
-Setting: TOADY Key: SYCOPHANT Hat: BOOTLICKER
-
+to uncover the Setting: TOADY, Key: SYCOPHANT and Hat: BOOTLICKER
 
 % references section
 
@@ -509,6 +560,77 @@ Setting: TOADY Key: SYCOPHANT Hat: BOOTLICKER
 \pagebreak
 \section*{Appendix} 
 \appendix 
+
+\section{Elliptic Curve Code}
+\label{ECC}
+\begin{python}
+A = 7
+B = 1
+P = 17
+
+def mult_inv(x):
+    #Exploit special case because P is prime
+    return x**(P-2) % P
+
+class Point:
+    def __init__(self, x, y):
+        self.x = x
+        self.y = y
+    def __str__(self):
+        return "({}, {})".format(self.x, self.y)
+    
+def double(point):
+    lam = ((3 * point.x**2 + A) * mult_inv(2 * point.y)) % P 
+    new_x = (lam**2 - 2*point.x) % P
+    new_y = (lam * (point.x - new_x) - point.y) % P
+    p = Point(new_x, new_y)
+    return p
+
+def add(p, q):
+    lam = ((q.y - p.y) * mult_inv(q.x- p.x)) % P
+    new_x = (lam**2 - p.x - q.x) % P
+    new_y = (lam * (p.x - new_x) - p.y) % P
+    p = Point(new_x, new_y)
+    return p
+
+def multiple_add(p, q, n):
+    for i in range(1, n):
+        q = add(p, q)
+    return q
+
+def power(p, n):
+    q = double(p)
+    for i in range(2, n):
+        q = add(p, q)
+    return q
+\end{python}
+\vfill
+\pagebreak
+
+\section{EC Diffie-Hellman}
+\label{ECDH}
+\begin{python}
+g = Point(11,7)
+
+#A 
+A_key = 5
+gA = power(g, A_key)
+
+#B 
+B_key = 6
+gB = power(g, B_key)
+
+#A sends gA and B sends gB to A
+
+#A 
+gAB = multiple_add(g, gB, A_key)
+print gAB
+
+#B 
+gBA = multiple_add(g, gA, B_key)
+print gBA
+\end{python}
+
 \section{Vigenere Code}
 \label{vig_code}
 \begin{python}
@@ -533,6 +655,9 @@ with open('ciphertext.txt'):
         
 print answer
 \end{python}
+
+\vfill
+\pagebreak
 
 \section{IC Code}
 \label{IC_code}
@@ -581,6 +706,8 @@ with open("secret.hex") as f:
     print plaintext
 \end{python}
 
+\vfill
+\pagebreak
 \section{Headline Code}
 \label{headline_code}
 \begin{python}
@@ -649,6 +776,40 @@ for word in guesses:
     total += len(word[1])
 \end{python}
 
+\section{Headline Key Checker}
+\label{Headline_checker}
+\begin{python}
+def rotate(s):
+    return s[1:]+s[:1]
+
+def sub(ciphertext, key, rotated_key):
+    m = {}
+    for c, p in zip(key, rotated_key):
+        m[p] = c
+    
+    plaintext = ""
+    for c in ciphertext:
+        if c == ' ':
+            plaintext += ' '
+        else:
+            plaintext += m[c]
+    
+    return "{} -- {}".format(plaintext, rotated_key)
+    
+
+def check_key(ciphertext, key):
+    
+    k = key
+    
+    for i in range(0, len(key)):
+        k = rotate(k)
+        
+        print sub(ciphertext, key, k)
+
+
+check_key("YNTS QHABT YBK KJVT NR ORLSJN HCTCYA HQYKJV CYOCMBYNT", 
+          "LEBSTNYVWKZXFGAJICORHPUQDM")
+\end{python}
 %\vfill
 
 % that's all folks
