--- a/report/bare_jrnl.tex
+++ b/report/bare_jrnl.tex
@@ -214,6 +214,10 @@ in this document. This resulted  in the ciphertext:
 ``HkyIm1ppneZOBbm1XC2xtCnRBGHVFJvVQzOM4wr24WkLJC8xFZhS''. I also decrypted the
 message with the same key, and was able to retrieve the original message again. 
 
+It is important to note that this particular key exchange is not secure,
+because the size of the group used is very small. If this were to be used in
+the real world, a far larger group should be used. 
+
 \vfill
 \pagebreak
 \section{Vigenere Cipher}
